--- a/create-multiple-forms-forked/index.html
+++ b/create-multiple-forms-forked/index.html
@@ -9,7 +9,7 @@
         <input type="email" id="email" placeholder="abc@gmail.com" />
         <label for="password"> Password </label>
         <input type="password" id="password" />
-        <button><img src="https://ninjasfiles.s3.amazonaws.com/0000000000001394.png" height="10" width="20"/> Login</button>
+        <button><img src="https://ninjasfiles.s3.amazonaws.com/0000000000001394.png" height="10" width="20" alt="CN Logo"/> Login</button>
         <br />
         <br />
         <hr />
@@ -20,7 +20,7 @@
     <main>
       <section>
         <h3><a href="https://www.codingninjas.com/">Coding Ninjas Blogs</a></h3>
-        <img src="https://ninjasfiles.s3.amazonaws.com/0000000000001395.png" />
+        <img src="https://ninjasfiles.s3.amazonaws.com/0000000000001395.png" alt="CN header banner"/>
         <br /><br />
         <hr />
       </section>
